# Deezer-dl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: api.rs  auth.rs  crypto.rs  download.rs  main.rs  models.rs
