[package]
name = "deezer-dl"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["cookies", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
md-5 = "0.10"
aes = "0.8"
blowfish = "0.9"
cbc = "0.1"
cipher = "0.4"
hex = "0.4"
anyhow = "1"
futures-util = "0.3"
dirs = "6"
console = "0.15"

[profile.release]
opt-level = "z"
lto = true
strip = true
